[gd_scene load_steps=2 format=3 uid="uid://baa3mm4cqcv1n"]

[ext_resource type="Script" path="res://Scripts/IntroScreen.gd" id="1_dy3gc"]

[node name="IntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dy3gc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]MISSILE COMMAND"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Start" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Start"

[node name="Settings" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Settings"

[node name="Quit" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Quit"

[connection signal="gui_input" from="MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_start_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_gui_input"]
